--- a/.spectral-hyperswitch.yml
+++ b/.spectral-hyperswitch.yml
@@ -22,3 +22,31 @@ rules:
     then:
       field: "paths"
       function: truthy
+      
+  # Additional rules to trigger violations
+  operation-description:
+    description: "Operation must have description"
+    message: "All operations must have a description"
+    given: "$.paths[*][*]"
+    severity: warn
+    then:
+      field: "description"
+      function: truthy
+      
+  schema-properties-examples:
+    description: "Schema properties should have examples"
+    message: "Schema properties should include examples for better documentation"
+    given: "$.components.schemas..properties[*]"
+    severity: warn
+    then:
+      field: "example"
+      function: truthy
+      
+  required-response-schema:
+    description: "Responses must have schemas"
+    message: "All responses must define a schema"
+    given: "$.paths[*][*].responses[*].content[*]"
+    severity: error
+    then:
+      field: "schema"
+      function: truthy
